# KGAgent

./: .env.docker  .env.example  .gitignore  Dockerfile  KGAgent.code-workspace  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  main.py  multi_agent.plan.md  pyproject.toml
dashboard/: Dockerfile  MCP_README.md  mcp.json  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/crawler/: page.tsx
dashboard/components/: agent-actions.tsx  agent-loading.tsx  agent-reasoning.tsx  agent-status-panel.tsx  app-sidebar.tsx  chat-history.tsx  chat-input-with-upload.tsx  chat-with-history.tsx  copilot-provider.tsx  crawler-control.tsx  document-manager.tsx  file-upload.tsx  graph-explorer.tsx  mcp-config-manager.tsx  pipeline-status.tsx  reprocessing-manager.tsx
dashboard/lib/: api.ts
scripts/: check_all_docs.py  check_duplicates.py  check_falkor_driver.py  check_graphiti.py  check_hash.py  check_jobs.py  check_pipeline_activity.py  check_stuck_doc.py  cleanup_stuck_docs.py  count_docs.py  download_embeddings_model.py  fix_document_titles.py  lint_multi_agent.py  recover_entities.py  register_gpt_doc.py  reprocess_gpt_export.py  start-local.ps1  start-local.sh  test_agent.py  test_gpt_parser.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  verify_pipeline.py
src/kg_agent/: __init__.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_crawler_service.py  test_e2e_pipeline.py  test_manager.py  test_multi_agent_api.py  test_multi_agent_api_integration.py  test_multi_agent_e2e.py  test_multi_agent_integration.py  test_pipeline.py  test_pipeline_integration.py  test_reprocessing.py
(+97 files in other folders)
