[project]
name            = "kg-agent"
version         = "0.1.0"
description     = "Web-to-Knowledge-Graph ETL Pipeline with Crawl4AI"
readme          = "README.md"
requires-python = ">=3.11"
dependencies    = [
    "crawl4ai>=0.7.6",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "prometheus-client>=0.20.0",
    "tenacity>=8.2.0",
    "docling>=1.0.0",
    "langchain-text-splitters>=0.0.1",
    "chromadb>=1.3.5",
    "sentence-transformers>=5.1.2",
    "graphiti-core>=0.4.0",
    "neo4j>=5.0.0",
    "pydantic-ai>=0.2.0",
    "openai>=1.0.0",
    "requests>=2.32.5",
    # Multi-agent orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.1.0",
    "copilotkit>=0.1.72",
    "ag-ui-langgraph>=0.0.21",
]

    [project.optional-dependencies]
    dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.1.0", "httpx>=0.26.0", "black>=23.0.0", "ruff>=0.1.0", "mypy>=1.7.0"]

[tool.pytest.ini_options]
testpaths        = ["tests"]
python_files     = ["test_*.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
addopts          = ["--verbose", "--tb=short", "--strict-markers", "--asyncio-mode=auto"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=9.0.1", "pytest-asyncio>=1.3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/kg_agent"]
